[gd_scene load_steps=2 format=3 uid="uid://crs4x04sgqv7i"]

[ext_resource type="Script" uid="uid://cn0fgfhycc8vo" path="res://overlay_screens/screens.gd" id="1_iq8hk"]

[node name="Screens" type="Node"]
script = ExtResource("1_iq8hk")

[node name="GameOverScreen" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
offset_right = 768.0
offset_bottom = 768.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="GameOverScreen"]
offset_left = 256.0
offset_top = 192.0
offset_right = 512.0
offset_bottom = 320.0
text = "Game Over
You Lost!

Try again?"
horizontal_alignment = 1

[node name="Button" type="Button" parent="GameOverScreen"]
offset_left = 320.0
offset_top = 336.0
offset_right = 448.0
offset_bottom = 367.0
text = "Return to Title"

[node name="TitleScreen" type="Node2D" parent="."]
visible = false

[connection signal="pressed" from="GameOverScreen/Button" to="." method="_on_title_return_button_pressed"]
